# MPC-SLAM-on-F1TENTH

./: .gitignore  CONTRIBS.md  README.md  README.txt  requirements.txt  setup.bash
Deprecated/control_submission/: CMakeLists.txt
Deprecated/control_submission/src/: ControlSubmissionNode.cpp  ControlSubmissionNode.hpp
Deprecated/safety/: setup.cfg
Deprecated/safety/safety/: safety_node.py
control_pkg/: CMakeLists.txt  package.xml
control_pkg/src/: control_node.cpp
control_submission/: .gitignore  CMakeLists.txt  package.xml
control_submission/src/: ControlSubmissionNode.cpp  ControlSubmissionNode.hpp  Main.cpp
deliverables/milestone_1/: milestone_1.py
dev_b7_interfaces/: .gitignore  CMakeLists.txt  README.md  package.xml
dev_b7_interfaces/msg/: ControlSubmissionMessage.msg  DriveControlMessage.msg
docs/: acceptance.md  assumptions.md  interface_spec.md
drive_control/: CMakeLists.txt  package.xml
drive_control/drive_control_node/src/: AppPCH.h  Application.hpp  ExecutionContext.cpp  ExecutionContext.hpp  Main.cpp  NodeImpl.cpp
drive_controll/: CMakeLists.txt  package.xml
drive_controll/src/: AppPCH.h  Application.hpp  Main.cpp  NodeImpl.cpp
f1tenth_utils/: package.xml  setup.cfg  setup.py
f1tenth_utils/f1tenth_utils/: utils.py
gap_following/: GAP_FOLLOWING_REVIEW.md  config.json  package.xml  sample-config.json  setup.cfg  setup.py
gap_following/additionals/: mapper.py
gap_following/gap_following/: LowPassFilter.py  PID_control.py  gap_following.py  gap_utils.py  main_node.py
high_level_planner/: package.xml  setup.cfg  setup.py
high_level_planner/high_level_planner/: high_level_planner.py
mapper_test_code/: mapper.py
milestones/: package.xml  setup.cfg  setup.py
milestones/launch/: milestone1_py.py  milestone2_py.py  milestone2_python_py.py  milestone3_py.py  milestone4_py.py  milestone5_py.py  project.py  project_py.py  race_line_stack.launch.py
mpc_controller/: package.xml  setup.cfg  setup.py
mpc_controller/config/: example_centerline.csv  mpc_params.yaml  mpc_sim_params.yaml
mpc_controller/launch/: mpc.launch.py
mpc_controller/mpc_controller/: __init__.py  gap_utils.py  mpc_node.py
mpc_controller/mpc_controller/mpc_core/: __init__.py  discretization.py  linearization.py  nearest_point.py  path_loader.py  reference.py  speed_profile.py  tracking_problem.py  vehicle_model.py
mpc_controller/mpc_controller/mpc_solvers/: __init__.py  qp_cvxpy_osqp.py  qp_matrices.py  warmstart.py
mpc_controller/mpc_controller/ros2_nodes/: __init__.py  mpc_controller_node.py
mpc_controller/test/: test_path_loader.py  test_qp_build.py  test_reference.py  test_tracking_problem.py  test_vehicle_model.py
perception_pkg/: CMakeLists.txt  package.xml  setup.py
perception_pkg/perception_pkg/: live_mapper_node.py
perception_pkg/src/: perception_node.cpp
pic/: rosgraph.dot
planning_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
planning_pkg/planning_pkg/: race_line_core.py  race_line_planner.py
planning_pkg/src/: planning_node.cpp
planning_pkg/test/: test_race_line_core.py
safety/: CMakeLists.txt  README.md  package.xml  setup.py
safety/safety/: config.py  safety_node.py
safety/safety_node/src/: AppPCH.h  Application.hpp  ExecutionContext.cpp  ExecutionContext.hpp  Main.cpp  NodeImpl.cpp
safety/safety_node/src/Core/: DriveControlNode.cpp  DynamicParameter.hpp  Executor.hpp  Interfaces.hpp  NodeBase.hpp  SafetyInfo.hpp
safety/safety_node/src/Providers/: ComputeWrapper.cpp  ComputeWrapper.hpp  DepthMapSafetyInfoProvider.cpp  DepthMapSafetyInfoProvider.hpp  DeviceComputation.cu  DeviceComputation.cuh  LidarSafetyInfoProvider.cpp  LidarSafetyInfoProvider.hpp
safety/safety_node/src/Utils/: ParameterUtils.hpp  TypeUtils.hpp
safety_python/: README.md  package.xml  setup.cfg  setup.py
safety_python/safety_python/: safety_python_node.py
shells/: PlayRecordedData.txt  source_all.bash  start_keyboard_control.bash  start_my_ide.bash  start_simulator.bash
wall_follow/: package.xml  setup.py
wall_follow/wall_follow/: KalmanFilter.py  PID_control.py  data_process.py  wall_follow.py
yolo/: README.md  extract pics.py  yolo laser match.py  yolo.py
